// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot horizontal list 1`] = `
<DocumentFragment>
  <div>
    <div
      class="MuiButtonGroup-root"
      role="group"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        orientation="horizontal"
        role="button"
        style="justify-content: center;"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Explore
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        orientation="horizontal"
        role="button"
        style="justify-content: center;"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          My Library
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        orientation="horizontal"
        role="button"
        style="justify-content: center;"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Add Book
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snapshot vertical list 1`] = `
<DocumentFragment>
  <div>
    <div
      class="MuiButtonGroup-root MuiButtonGroup-vertical"
      role="group"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlined"
        orientation="vertical"
        role="button"
        style="justify-content: center;"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Explore
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlined"
        orientation="vertical"
        role="button"
        style="justify-content: center;"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          My Library
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlined"
        orientation="vertical"
        role="button"
        style="justify-content: center;"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Add Book
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
